tests/golden/err-implicit-capture/expected_error.txt
error: `prefix` は外側の関数のローカル値です（2行目で束縛）。この関数の内側からは参照できません
 --> ./entry.clum:6:10
  |
6 |         {prefix}
  |          ^^^^^^ 引数として明示的に受け取ってください（暗黙のキャプチャは禁止です）
